// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form/> renders an empty form if children are null or undefined 1`] = `
<form
  className="form"
  onReset={[Function]}
  onSubmit={[Function]}
/>
`;

exports[`<Form/> renders the form and its buttons 1`] = `
<form
  className="form"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <fieldset>
    <div>
      <input
        defaultValue="42"
        name="foo"
        type="text"
      />
    </div>
  </fieldset>
  <fieldset>
    <div>
      <input
        defaultValue="42"
        name="bar"
        type="text"
      />
    </div>
  </fieldset>
  <fieldset
    className="group reversed"
    disabled={false}
  >
    <button
      className="button solid primary foo"
      disabled={false}
      style={
        Object {
          "display": "flex",
        }
      }
    >
      Continue
    </button>
    <button
      className="button text primary bar"
      type="reset"
    >
      Cancel
    </button>
  </fieldset>
</form>
`;

exports[`<Form/> renders the form and wraps each children with a <fieldset> 1`] = `
<form
  className="form"
  onReset={[Function]}
  onSubmit={[Function]}
>
  <fieldset>
    <div>
      <input
        defaultValue="42"
        name="foo"
        type="text"
      />
    </div>
  </fieldset>
  <fieldset>
    <div>
      <input
        defaultValue="42"
        name="bar"
        type="text"
      />
    </div>
  </fieldset>
</form>
`;
